[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI/Screens.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/bgm_0.mp3" type="AudioStream" id=4]
[ext_resource path="res://UI/Background.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 230, 703 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 231, 705 )
offset = Vector2( 0, -200 )
current = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Screens" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="MusicFade" type="Tween" parent="."]

[connection signal="start_game" from="Screens" to="." method="new_game"]
